Update index.html file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="about-me-info">
             <div class="text-box">
                 <div class="my-title">
-                    Junior Software Developer
+                    Javascript Software Developer
                 </div>
                 <div class="my-name">
                     Gorun Milic
@@ -43,7 +43,7 @@
                 <div class="about-me-text">
                     "Hi I'm Gorun, I graduated information technologies at Faculty Of Science in Novi Sad. The thing I love the most about programming is watching how ideas are becoming alive. Besides programming I also like graphic design. This is an area in which I would also like to gain more knowledge. Maybe connection between those two branches would be the perfect match for me."
                 </div>
-                <a class="btn-link" href="./files/Gorun-Milic.pdf" download="Gorun-Milic" target="_blank">
+                <a class="btn-link" href="./files/Gorun-Milic1.pdf" download="Gorun-Milic" target="_blank">
                     <button class="download-btn">Download PDF</button>
                 </a>
             </div>
@@ -66,7 +66,7 @@
                     Programming
                 </div>
                 <div class="skill-text">
-                    HTML, CSS, Javascript, Typescript, Java, PHP, SQL
+                    HTML, CSS, Javascript, Typescript, Java, NodeJS, SQL
                 </div>
             </div>
 
@@ -78,7 +78,7 @@
                     Technologies
                 </div>
                 <div class="skill-text">
-                    Angular, NestJS, SpringBoot, Android, JPA, TypeORM, EJB
+                    Angular, NestJS, SpringBoot, Android, JPA, TypeORM, Mongoose
                 </div>
             </div>
 
@@ -130,7 +130,7 @@
                     Concepts
                 </div>
                 <div class="skill-text">
-                    Git, JWT Tokens, Rest, HTTP, OOP Principles
+                    Git, Scrum, Rest, HTTP, OOP Principles, RxJS
                 </div>
             </div>
 
@@ -224,27 +224,34 @@
     <div class="experience">
         <div class="experience-title">Experiences</div>
         <div class="experience-list">
+            
             <div class="exp-1">
                 <div class="exp-img">
-                    <img src="images/icons/university1.png" height="65px">
+                    <img src="images/icons/intern1.png" height="65px">
                 </div>
                 <div class="exp-name">
-                    University
+                    Frontend Developer, Levi9
+                </div>
+                <div class="exp-date">
+                    Mar 2023- Present
                 </div>
                 <div class="exp-text">
-                    Four years of studying information technologies at the Faculty of Sciences in Novi Sad(Serbia).
+                    Working as a frontend developer in scrum team environment using technologies like HTML, CSS and Angular
                 </div>
             </div>
 
             <div class="exp-2">
                 <div class="exp-img">
-                    <img src="images/icons/intern1.png" height="65px">
+                    <img src="images/icons/university1.png" height="65px">
                 </div>
                 <div class="exp-name">
-                    Internship
+                    Javascript Masterclass, Levi9
+                </div>
+                <div class="exp-date">
+                    Nov 2022 - Mar 2023
                 </div>
                 <div class="exp-text">
-                    A one month internship at SimpleTask company where I worked on a fitpass application using Angular and NestJS.
+                    Intensive course covering modern web technologies like HTML, CSS, Javascript, NodeJS, Anguar and MongoDB
                 </div>
             </div>
 
@@ -253,10 +260,13 @@
                     <img src="images/icons/freelance2.png" height="65px">
                 </div>
                 <div class="exp-name">
-                    Freelance
+                    Student Internship, Simple Task
+                </div>
+                <div class="exp-date">
+                    Nov 2021 - Dec 2021
                 </div>
                 <div class="exp-text">
-                    As a hobby, I did freelance projects on a platform called 99designs. There I mostly participated in logo design contests.
+                    A one month internship at SimpleTask company where I worked on a fullstack web application using Angular and NestJS.
                 </div>
             </div>
         </div>
