--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     Nov 2022 - Mar 2023
                 </div>
                 <div class="exp-text">
-                    Intensive course covering modern web technologies like HTML, CSS, Javascript, NodeJS, Anguar and MongoDB
+                    Intensive course covering modern web technologies like HTML, CSS, Javascript, NodeJS, Angular and MongoDB
                 </div>
             </div>
 
