Change link for Communiq Design

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="project1-description">
                     This is a fully responsive application built using the Angular Framework. You can view the live website at the link below. However, the application is still in the development phase.
                 </div>
-                <a class="btn-link" href="https://gorun-milic-cv.000webhostapp.com/" target="_blank">
+                <a class="btn-link" href="https://communiqdesign-ee46a.web.app/" target="_blank">
                     <button class="project1-button">Link to Website</button>
                 </a>
             </div>
